--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- ❗️❗️❗️ form partial -->
+    <include src="./partials/form.html"></include>
+    <!-- ❗️❗️❗️ Gallery partial -->
+    <include src="./partials/gallery.html"></include>
   </body>
 </html>
